fix to finalobj, take placename out of yoverflow

--- a/public/style.css
+++ b/public/style.css
@@ -4,15 +4,16 @@
     margin:0;
     padding:0;
     width:100%
-  }
+ }
 
   header {
     font-family: 'Roboto Mono';
-    text-transform: uppercase;
     text-align: center;
     top: 0;
     padding: 25px 50px;
     max-width: 100%;
+    color:#FFBA00;
+
     /* border: 1px solid red; */
   }
 
@@ -23,6 +24,7 @@
     padding: 25px;
     max-width: 100%;
     text-align: center;
+    color:#FFBA00;
     /* border: 1px solid red; */
   }
 
@@ -34,13 +36,15 @@
   }
 
   h1 {
-    font-size: 260%;
-    letter-spacing: 5px;
+    font-size: 200%;
+    letter-spacing: 2px;
   }
 
   h2 {
     font-size: 130%;
     font-style: italic;
+    font-variant: small-caps;
+
   }
 
   h3 {
@@ -63,10 +67,10 @@
   header {
     font-family: 'Roboto Mono';
     line-height: 110%;
-    text-transform: uppercase;
     top: 0;
-    padding: 25px 30px;
+    padding: 25px 50px;
     max-width: 100%;
+    color:#1B2631;
     /* border: 1px solid green; */
   }
 
@@ -79,7 +83,14 @@
     max-height: 70vh;
     overflow-y: auto;
     float:left;
+    color:#1B2631;
     /* border: 1px solid green; */
+  }
+
+  #tweets {
+    max-width: 100%;
+    max-height: 70vh;
+    overflow-y: auto;
   }
 
   #map {
@@ -92,13 +103,15 @@
   }
 
   h1 {
-    font-size: 260%;
-    letter-spacing: 5px;
+    font-size: 200%;
+    letter-spacing: 2px;
   }
 
   h2 {
     font-size: 130%;
     font-style: italic;
+    font-variant: small-caps;
+
   }
 
   h3 {
